force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>The field contains a short paragraph describing the function of the feature process.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>