force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Feature__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Feature__c</fullName>
    <description>This field is required. It specifies feature to which this process belongs.</description>
    <label>Feature</label>
    <referenceTo>nFORCE__Feature__mdt</referenceTo>
    <relationshipLabel>Feature Processes</relationshipLabel>
    <relationshipName>Feature_Processes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>