force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Required__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the process is required and must be executed when the associated feature action is performed. The execution type of a required process cannot be changed to &apos;Manual Only&apos;.</description>
    <label>Required Process</label>
    <type>Checkbox</type>
</CustomField>