force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Type__c</fullName>
    <description>This field is required. It specifies the process type. The type is used to determine during which actions the process will be executed.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enable</fullName>
                <default>true</default>
                <label>Enable</label>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>